kustomize/base/apim/netpol/common-private-ga-ingress-netpol.yaml
# --------------------------------------------------------------------
# Copyright (c) 2024, WSO2 LLC. (http://wso2.com) All Rights Reserved.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# -----------------------------------------------------------------------

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-common-private-global-adapter-ingress-network-policy
spec:
  policyTypes:
    - Ingress
  podSelector:
    matchLabels:
      choreo.component: choreo-connect-common-private-global-adapter
  ingress:
    - {}
