kustomize/base/apim/netpol/namespace.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny-all-ingress-network-policy
spec:
  policyTypes:
  - Ingress
  podSelector: {}
  ingress: []

---

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-allow-ingress-network-policy
spec:
  policyTypes:
  - Ingress
  podSelector: {}
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          purpose: dev-choreo-ingress-traffic
      podSelector:
        matchLabels:
          app.kubernetes.io/component: controller
          app.kubernetes.io/instance: dev-choreo-system
          app.kubernetes.io/name: ingress-nginx
  - from:
    - namespaceSelector:
        matchLabels:
          app: dev-choreo-control-plane
  - from:
    - podSelector: {}
